--- a/www/assets/css/style.css
+++ b/www/assets/css/style.css
@@ -1,3 +1,9 @@
+.item{
+  overflow: inherit ;
+  text-overflow: inherit ;
+  white-space: normal ;
+}
+
 /* Additional styling for timeline */
 ul.timeline li { margin-bottom: 12px; }
 ul.timeline li timeline-panel { padding: 4px 12px }
@@ -58,6 +64,7 @@ svg.chart { display: none; }
 .buttons .button spinner { float: right; }
 .buttons .button.icon-left:before { padding-right: 0.4em; margin-top: 0; }
 
+/* Measurement detail color indications */
 .value-desirable {
   background-color: #aaffa8;
 }
@@ -70,16 +77,61 @@ svg.chart { display: none; }
   background-color: #ff98a4;
 }
 
-input[type="range"]::-webkit-slider-thumb {
+input[type=range] {
+  height: 40px;
   -webkit-appearance: none;
-  position: relative;
-  top: -1px;
-  z-index: 1;
-  width: 11px;
-  height: 11px;
-
-  -webkit-border-radius: 40px;
-  -moz-border-radius: 40px;
-  border-radius: 40px;
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ebf1f6), color-stop(50%,#abd3ee), color-stop(51%,#89c3eb), color-stop(100%,#d5ebfb));
 }
+
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100px;
+  height: 5px;
+  background: #ddd;
+  border: none;
+  border-radius: 3px;
+}
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  border: none;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  background: #387ef5;
+  margin-top: -8px;
+}
+
+input[type=range]:focus {
+  outline: none;
+}
+
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #ccc;
+}
+
+.questionnaire-input-range {
+  list-style: none;
+  text-align:center;
+  margin:0px auto 0px auto;
+}
+
+.questionnaire-input-range input[type=range] {
+  width: 85%;
+}
+
+.questionnaire-input-range ul {
+  width: 100%;
+  display: table;
+  list-style: none;
+}
+
+.questionnaire-input-range li {
+  width: 14%;
+  display: table-cell;
+  text-align: center;
+  font-size: small;
+}
+
+.questionnaire-input-range .option {
+  width: 40px;
+}
+
